Fixed mobile - horizontal scroll

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -23,8 +23,9 @@ body {
   display: none;
 }
 #app {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
+  margin: 0 auto;
 }
 .menu {
   display: flex;
